# T-Vault

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  UI_OVERVIEW.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: generate-icons.js  tauri-dev.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: api_keys.rs  encryption.rs  main.rs  storage.rs  telegram.rs
src-tauri/src/fuse/: cache.rs  download_queue.rs  filesystem.rs  inode_manager.rs  mod.rs  mount_manager.rs  open_tracker.rs
src/components/: ApiKeyScreen.tsx  Confetti.tsx  Dashboard.tsx  DeleteConfirmationModal.tsx  DownloadDialog.tsx  FileManager.tsx  Gallery.tsx  LoadingScreen.tsx  LoginScreen.tsx  Settings.tsx  Sidebar.tsx  SkeletonLoader.tsx  StorageStats.tsx  Toast.tsx  ToastContainer.tsx  TransferManager.tsx
src/contexts/: ThemeContext.tsx
