[package]
name = "t-vault"
version = "1.0.1"
description = "T-Vault - Unlimited Cloud Storage via Telegram"
authors = ["T-Vault Team"]
license = "MIT"
repository = "https://github.com/inulute/t-vault"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-all", "shell-open", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
base64 = "0.21"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
directories = "5.0"
chrono = "0.4"
anyhow = "1.0"
mime_guess = "2.0"
dotenv = "0.15"
grammers-client = "0.8"
grammers-session = "0.8"
grammers-mtsender = "0.8"
futures = "0.3"
tokio-stream = "0.1"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
